@startuml

title __WEATHER's Class Diagram__\n

  namespace de.tuberlin.dima.bdapro.dataIntegration.weather {
    class de.tuberlin.dima.bdapro.dataIntegration.weather.Field {
        - LOG : Logger
        {static} - TIMESTAMP_FORMAT_STR : String
        - clazz : Class<?>
        - isFeature : boolean
        - name : String
        - value : Object
        + Field()
        + getName()
        + getTypeInformation()
        + getValue()
        + isFeature()
        + setValue()
    }
  }
  

  namespace de.tuberlin.dima.bdapro.dataIntegration.weather {
    class de.tuberlin.dima.bdapro.dataIntegration.weather.WeatherReading {
        + apparent_temperature : double
        + cloud_cover : double
        + dew_point : double
        + humidity : double
        + latitude : double
        + location : String
        + longitude : double
        + ozone : double
        + precip_intensity : double
        + precip_probability : double
        + precip_type : String
        + pressure : double
        + temperature : double
        + time : Timestamp
        + uv_index : double
        + visibility : double
        + wind_bearing : double
        + wind_gust : double
        + wind_speed : double
        {static} + getFields()
    }
  }
  

  namespace de.tuberlin.dima.bdapro.dataIntegration.weather {
    class de.tuberlin.dima.bdapro.dataIntegration.weather.WeatherReadingInputFormat {
        {static} - serialVersionUID : long
        + WeatherReadingInputFormat()
        + open()
        + readRecord()
    }
  }
  

  namespace de.tuberlin.dima.bdapro.dataIntegration.weather {
    class de.tuberlin.dima.bdapro.dataIntegration.weather.WeatherReadingParser {
        {static} - DELIMITER : String
        - LOG : Logger
        - fields : List<Field>
        + WeatherReadingParser()
        + readRecord()
    }
  }
  

  namespace de.tuberlin.dima.bdapro.dataIntegration.weather {
    class de.tuberlin.dima.bdapro.dataIntegration.weather.WeatherWorkflow {
        {static} - weatherDataPath : String
        {static} + generateFeatureTable()
        {static} + main()
        {static} - readWeather()
    }
  }
  

  de.tuberlin.dima.bdapro.dataIntegration.weather.Field .up.|> java.io.Serializable
  de.tuberlin.dima.bdapro.dataIntegration.weather.Field -up-|> de.tuberlin.dima.bdapro.advancedProcessing.featureTable.Column
  de.tuberlin.dima.bdapro.dataIntegration.weather.WeatherReadingInputFormat -up-|> org.apache.flink.api.common.io.DelimitedInputFormat
  de.tuberlin.dima.bdapro.dataIntegration.weather.WeatherReadingInputFormat o-- de.tuberlin.dima.bdapro.dataIntegration.weather.WeatherReadingParser : parser
  de.tuberlin.dima.bdapro.dataIntegration.weather.WeatherReadingParser .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
